sample-app/gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting
  labels:
    app: greeting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeting
  template:
    metadata:
      labels:
        app: greeting
    spec:
      containers:
        - name: greeting
          image: ghcr.io/ibm-cloud-architecture/cloud-native-bootcamp/greeting:v1.1.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 64Mi
