sample-app/gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting
  labels:
    app: greeting
spec:
  selector:
    app: greeting
  ports:
    - name: http
      port: 8080
      targetPort: 8080
