sample-app/gitops/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: greeting
  labels:
    app: greeting
spec:
  to:
    kind: Service
    name: greeting
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
